--- a/src/Makefile
+++ b/src/Makefile
@@ -1,7 +1,7 @@
 CCFLAGS ?= -std=c99 -O3
 
 TARGET = pixiewps
-CRYPTO = crypto/sha256.c crypto/md.c crypto/md_wrap.c
+CRYPTO = mbedtls/sha256.c mbedtls/md.c mbedtls/md_wrap.c
 SOURCE = $(TARGET).c random_r.c $(CRYPTO)
 LIBS   = -lpthread
 
